--- a/.github/workflows/container-services.yml
+++ b/.github/workflows/container-services.yml
@@ -24,7 +24,9 @@ jobs:
 
     steps:
       - name: Install dependencies
-        run: apt-get -q update && apt-get install -y git make redis-tools
+        run: |
+          apt-get -q update
+          apt-get install -y git make redis-tools sudo
 
       # Downloads a copy of the code in your repository before running CI tests
       - name: Check out repository code
